# python-pvas-pttbackend

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile_alpine  Dockerfile_debian  README.rst  docker-compose.yml.tpl  docker-compose_local.yml  docker-compose_local_reload.yml  pyproject.toml  tox.ini  traefik.toml.tpl
alembic/: __init__.py  env.py
alembic/versions/: 22ac830c256a_initial_schema_and_tables.py  __init__.py  bd96a4f2b31e_initial_schema_and_tables.py
docker/: entrypoint-alembic.sh  entrypoint-test.sh  entrypoint.sh
src/pttbackend/: __init__.py  api.py  config.py  console.py  dbconfig.py  dbdevhelpers.py  pipelineclient.py  security.py
src/pttbackend/models/: __init__.py  base.py  instance.py
src/pttbackend/schemas/: base.py  instance.py  pager.py
src/pttbackend/templates/: instructions.html
src/pttbackend/views/: callbacks.py  instances.py  instructions.py
tests/: conftest.py  docker-compose.yml  test_console.py  test_pttbackend.py
tests/data/: jwtRS256.key  jwtRS256.pub
